--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <section id="container">
              <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>programação</h3>
+                    <h3>Anime</h3>
                     <div class="cartao__conteudo__pergunta">
-                        O que é JavaScript?
+                        qual o personagem mais forte em Dragon Ball Super?
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        O JavaScript é uma linguagem de Programção
+                        Personagem Zeno
                     </div>
                 </div>
              </article>
@@ -24,10 +24,10 @@
                 <div class="cartao__conteudo">
                     <h3>Segunda pergunta</h3>
                     <div class="cartao__conteudo__pergunta">
-                        O que é CSS?
+                        Qual o jogo favorito de quem vos fala?
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        O CSS é uma linguagem de estilização 
+                        Shadow of the Colossus, GTA V, Minecraft (dificil dizer apenas um)
                     </div>
                 </div>
              </article>
