--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Flashcard</title>
+    <title>Flashcard do Daniel BY: Blackdel</title>
 </head>
 <body>
     <main>
@@ -13,10 +13,10 @@
                 <div class="cartao__conteudo">
                     <h3>Anime</h3>
                     <div class="cartao__conteudo__pergunta">
-                        qual o personagem mais forte em Dragon Ball Super?
+                        <p>qual o personagem mais forte em Dragon Ball Super?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        Personagem Zeno
+                        <p>Personagem Zeno</p>
                     </div>
                 </div>
              </article>
@@ -24,10 +24,21 @@
                 <div class="cartao__conteudo">
                     <h3>Segunda pergunta</h3>
                     <div class="cartao__conteudo__pergunta">
-                        Qual o jogo favorito de quem vos fala?
+                        <p>Qual o jogo favorito de quem vos fala?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        Shadow of the Colossus, GTA V, Minecraft (dificil dizer apenas um)
+                        <p>Shadow of the Colossus, GTA V, Minecraft (dificil dizer apenas um)</p>
+                    </div>
+                </div>
+             </article>
+             <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Segunda pergunta</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual o jogo favorito de quem vos fala?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>Shadow of the Colossus, GTA V, Minecraft (dificil dizer apenas um)</p>
                     </div>
                 </div>
              </article>
