--- a/index.html
+++ b/index.html
@@ -3,48 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
-    <title>Flashcard do Daniel BY: Blackdel</title>
+    <link rel="stylesheet" href="assets/style.css"> 
+    <title>Flashcard do Daniel Filipe</title>
 </head>
 <body>
-    <main>s
+    <main>
         <section id="container">
-             <article class="cartao">
+
+            <article class="cartao">
+                <h3 class="cartao__tema">Primeira peegunta</h3>
                 <div class="cartao__conteudo">
-                    <h3>Anime</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>qual o personagem mais forte em Dragon Ball Super?</p>
+                        <p>Qual o anime favorito do Daniel?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>Personagem Zeno</p>
+                        <p>Dragon ball (todos no geral)</p>
                     </div>
                 </div>
-             </article>
-             <article class="cartao">
+            </article>
+
+            <article class="cartao">
+                <h3 class="cartao__tema">Segunda pergunta</h3>
                 <div class="cartao__conteudo">
-                    <h3>Segunda pergunta</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Qual o jogo favorito de quem vos fala?</p>
+                        <p>Qual é o jogo favorito do Daniel?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>Shadow of the Colossus, GTA V, Minecraft (dificil dizer apenas um)</p>
+                        <p> Shadow of the colossus, Gta san andreas, lego marvel super hero </p> 
                     </div>
                 </div>
-             </article>
-             <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Segunda pergunta</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>Qual o jogo favorito de quem vos fala?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        <p>Shadow of the Colossus, GTA V, Minecraft (dificil dizer apenas um)</p>
-                    </div>
-                </div>
-             </article>
+            </article>
+
         </section>
     </main>
+
     <footer>
-        <p>projeto desenvolvimento alura, sem ganhar money</p>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
 </body>
+</html>
