--- a/index.html
+++ b/index.html
@@ -4,32 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css"> 
-    <title>Flashcard do Daniel Filipe</title>
+    <title>Flashcard do Daniel </title>
 </head>
 <body>
     <main>
         <section id="container">
 
             <article class="cartao">
-                <h3 class="cartao__tema">Primeira peegunta</h3>
-                <div class="cartao__conteudo">
-                    <div class="cartao__conteudo__pergunta">
-                        <p>Qual o anime favorito do Daniel?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        <p>Dragon ball (todos no geral)</p>
-                    </div>
-                </div>
-            </article>
-
-            <article class="cartao">
-                <h3 class="cartao__tema">Segunda pergunta</h3>
+                <h3 class="cartao__tema">JOGOS </h3>
                 <div class="cartao__conteudo">
                     <div class="cartao__conteudo__pergunta">
                         <p>Qual é o jogo favorito do Daniel?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p> Shadow of the colossus, Gta san andreas, lego marvel super hero </p> 
+                        <p>Shadow of the colossus, Gta san andreas, minecraft.</p>
+                    </div>
+                </div>
+            </article>
+
+            <article class="cartao">
+                <h3 class="cartao__tema">Musica</h3>
+                <div class="cartao__conteudo">
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Quais são as musicas favoritas do Daniel?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>What a wonderful world, 
+                           What you won't Do for love,
+                           Samurai do djavan.</p> 
                     </div>
                 </div>
             </article>
